--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "lodash": "^4.5.1",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "react-motion": "^0.4.2"
   }
 }
